force-app/main/default/objects/Order_Dish__c/Order_Dish__c.object-meta.xml
<CustomObject>
    <label>Order Dish</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Order Dish Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order_Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>