force-app/main/default/objects/Order_Dish__c/fields/Copy_of_Total_Dish_Price__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Total_Dish_Price__c</fullName>
    <label>Copy of Total Dish Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>