force-app/main/default/objects/Order_Dish__c/fields/Dish_Count__c.field-meta.xml
<CustomField>
    <fullName>Dish_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Dish Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>