force-app/main/default/objects/Order_Dish__c/fields/Total_Dish_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Dish_Price__c</fullName>
    <formula>Dish__r.Price__c *  Dish_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Dish Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>